# WorldClassCryptoExchange

./: Cargo.toml  README.md  docker-compose.yml  next-implementation-steps.md  readme.md  updated-readme-implementation.md
client/src/: index.tsx
client/src/assets/styles/: index.css
client/src/store/: store.ts
docs/: deployment.md  development_guidance.md  next_modules.md.md  quantum_resistance.md
frontend/src/components/defi/: DeFiPortfolio.tsx
src/: config.rs  lib.rs  main.rs  models.rs
src/admin/: mod.rs
src/api/: README.md  mod.rs  rest.rs  routes.rs  websocket.rs
src/api/api/: mod.rs
src/api/handlers/: market.rs  mod.rs  order.rs  user.rs  wallet.rs
src/api/middleware/: auth.rs  logging.rs
src/api/websocket/: channels.rs  handlers.rs  mod.rs
src/config/: default.toml
src/core/: README.md  trading_engine.rs.
src/db/: mod.rs  models.rs
src/db/repositories/: mod.rs  order_repository.rs  trade_repository.rs
src/defi/: Type of DeFi transaction.rs  service.rs
src/kyc/: mod.rs
src/security/: README.md  authentication.rs  authorization.rs  behavioral_biometrics.rs  behavioral_biometrics.rs.txt  mod.rs  password.rs  permission.rs
src/social trading/: social trading
src/trading_engine/: matching_engine.rs  mod.rs  order_book.rs  risk_management.rs
src/trading_engine/derivatives/: mod.rs
src/utils/: logging.rs  metrics.rs  mod.rs
src/wallet/: README.md  mod.rs  wallet_system.rs
