[package]
name = "worldclass-crypto-exchange"
version = "0.1.0"
edition = "2021"
authors = ["Som Kiran <somkiran@gmail.com>"]
description = "A comprehensive cryptocurrency exchange platform with advanced security features"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
tokio-postgres = "0.7"
deadpool-postgres = "0.10"
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.10"
futures-util = "0.3"
tokio-stream = "0.1"
async-trait = "0.1"
jsonwebtoken = "8.3"
lazy_static = "1.4"
dotenv = "0.15"

[lib]
name = "crypto_exchange"
path = "src/lib.rs"

[[bin]]
name = "crypto_exchange"
path = "src/main.rs"
