[package]
name = "worldclass-crypto-exchange"
version = "0.1.0"
edition = "2021"
authors = ["Som Kiran <somkiran@gmail.com>"]
description = "A comprehensive cryptocurrency exchange platform with advanced security features"

[dependencies]
# Async runtime and networking
tokio = { version = "1.28", features = ["full"] }
tokio-postgres = "0.7"
tokio-stream = "0.1"
deadpool-postgres = "0.10"
futures-util = "0.3"
async-trait = "0.1"

# Web frameworks and API
warp = "0.3"
actix-web = "4.3"
actix-cors = "0.6"
actix-web-actors = "4.2"

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"

# Date, time, and IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid", "decimal", "json"] }

# Authentication
jsonwebtoken = "8.3"

# Logging and configuration
log = "0.4"
env_logger = "0.10"
log4rs = "1.2"
dotenv = "0.15"
lazy_static = "1.4"

# Command line parsing
clap = { version = "4.3", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Numeric types for finance
rust_decimal = "1.30"
rust_decimal_macros = "1.30"

# Concurrency and performance optimizations
parking_lot = "0.12.1"
crossbeam = "0.8.2"
rayon = "1.7.0"

[lib]
name = "crypto_exchange"
path = "src/lib.rs"

[[bin]]
name = "crypto_exchange"
path = "src/main.rs"
